fix: 병원 이미지 확인 시 줌인 된 이미지 z-index 높게 설정해서 다른 이미지보다 위에뜨도록 수정

--- a/apps/my-furry-friend-fe/components/HospitalDetail/info/Swiper.module.scss
+++ b/apps/my-furry-friend-fe/components/HospitalDetail/info/Swiper.module.scss
@@ -5,4 +5,7 @@
   .swiper-pagination-bullet-active {
     background: #6282DB;
   }
+  .swiper-slide-zoomed {
+    z-index: 1000;
+  }
 }
